# cppboxy

./: CMakeLists.txt  fragment_shader.glsl  vertex_shader.glsl
include/: buffer_manager.h  camera.h  drawable.h  drawer.h  events.h  glh.h  keyboard.h  primitives.h  shader_manager.h  transformable.h  voxel.h  voxel_chunk.h  window.h  world.h
src/: buffer_manager.cpp  camera.cpp  drawable.cpp  drawer.cpp  events.cpp  glh.cpp  keyboard.cpp  main.cpp  shader_manager.cpp  transformable.cpp  voxel.cpp  voxel_chunk.cpp  window.cpp
